# sj

./: flit.ini  io.github.takluyver.sj.desktop  pyproject.toml  sj.desktop
sj/: __init__.py  __main__.py  bashrc.sh  control.py  new.py  send_update.py  utils.py
sj/panels/: dirstack.py  files.py  git.py  pwd.py
