[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sj"
authors = [
  {name = "Thomas Kluyver", email="thomas@kluyver.me.uk"}
]
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic=["version", "description"]

[project.urls]
Source = "https://github.com/takluyver/sj"

[project.scripts]
sj-new = "sj.new:main"
sj = "sj.control:main"
